# ReactionTimeDuel

./: .gitignore  AI_HANDOFF_DISPLAY.md  ATtiny85_Joystick.ino  AudioManager.h  DisplayProtocol.h  ESP32S3_Master.ino  ESP32_Host.ino  ESP8266_Slave.ino  MACAddr.txt  Protocol.h  README.md  ReactionTimer.code-workspace  soundProgram_Fixed.ino
ATtiny85_Joystick/: ATtiny85_Joystick.ino
Andrei's Display Code/: CMakeLists.txt  platformio.ini  sdkconfig.esp32-s3-devkitm-1  sdkconfig.esp32s3  sdkconfig.esp32s3.old
Andrei's Display Code/lib/: lv_conf.h
Andrei's Display Code/src/: display.cpp  main.cpp
Display/project1-game/: platformio.ini  sdkconfig.defaults
Display/project1-game/lib/ui/: CMakeLists.txt  filelist.txt  project.info  ui.h
Display/project1-game/lib/ui/fonts/: ui_font_MonserratBold64V2.c
Display/project1-game/lib/ui/images/: ui_img_1198241503.c  ui_img_2097260803.c  ui_img_img_deucemode_png.c  ui_img_img_group_winner_png.c  ui_img_img_player1_png.c  ui_img_img_player2_png.c  ui_img_img_player3_png.c  ui_img_img_player4_png.c  ui_img_img_pressjoyn_png.c  ui_img_img_reactmode_png.c  ui_img_img_shakemode_png.c
Display/project1-game/lib/ui/screens/: ui_MainScreen.c  ui_MainScreen.h
ESP32_Host/: AudioManager.h  DisplayProtocol.h  ESP32_Host.ino  Protocol.h
ReactionTimerHost/: enable_ccache.py  mp3Length.txt  platformio.ini
ReactionTimerHost/.claude/: settings.local.json
ReactionTimerHost/include/: AudioManager.h  DisplayProtocol.h  GameTypes.h  Protocol.h
ReactionTimerSlave/: platformio.ini
Test/: AudioTest.ino
(+27 files in other folders)
